# Voice-to-Task-Meeting-Assistant

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  router.py
app/api/routes/: auth.py  health.py  integrations.py  meetings.py  tasks.py  transcripts.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  base.py  session.py
app/integrations/: __init__.py  asana.py  base.py  factory.py  trello.py
app/models/: __init__.py  integration.py  meeting.py  task.py  transcript.py  user.py
app/repositories/: __init__.py  base.py  integration.py  meeting.py  task.py  transcript.py  user.py
app/schemas/: __init__.py  common.py  integration.py  meeting.py  task.py  transcript.py  user.py
app/services/: __init__.py  audio.py  auth.py  deduplication.py  embedding.py  pii_redaction.py  task_extraction.py  transcription.py
app/websocket/: manager.py
app/workers/: __init__.py  celery_app.py  tasks.py
scripts/: init-db.sql
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_meetings.py  test_task_extraction.py
